--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -45,8 +45,8 @@ a {
 
 body {
   margin: 0 auto;
-  min-width: 320px;
-  max-width: 768px;
+  // min-width: 320px;
+  // max-width: 768px;
   width: 100%;
   height: 100%;
   font-size: 14px;
